--- a/src/components/PrimaryCaseList.scss
+++ b/src/components/PrimaryCaseList.scss
@@ -3,9 +3,7 @@
 #primary-case-list {
     text-align: left;
     margin: 10px;
-}
-#primary-case-list-header {
-    margin-left: 5px;
+    margin-top: 0px;
 }
 .flex-primary-case-list-item {
     display: flex;
